--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,17 @@
             <version>13.0.1</version>
         </dependency>
 
-
     </dependencies>
     <groupId>groupId</groupId>
     <artifactId>StockViewer</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
