-updated pom.xml

--- a/StockViewer.ini
+++ b/StockViewer.ini
@@ -1,5 +1,5 @@
 #StockViewer
-#Mon Apr 20 15:12:47 EEST 2020
+#Mon Apr 20 18:54:17 EEST 2020
 TIME_INTERVAL=15min, 5min, 1min, Monthly, Weekly, Daily
-API_KEY=demo
+API_KEY=asddfsr2354
 OUTPUT_SIZE=full
