-Added more functionality to portfolios / tradingTabController -Tweaked tradingTab.fxml

--- a/StockViewer.ini
+++ b/StockViewer.ini
@@ -1,5 +1,5 @@
 #StockViewer
-#Thu Apr 30 20:53:00 EEST 2020
+#Mon May 18 21:36:02 EEST 2020
 TIME_INTERVAL=15min, 5min, 1min, Monthly, Weekly, Daily
-API_KEY=asddfsr2354
+API_KEY=47
 OUTPUT_SIZE=full
